fix css dark mode

--- a/assignment-3/src/index.css
+++ b/assignment-3/src/index.css
@@ -172,7 +172,7 @@ td {
   z-index: 1;
   left: 0;
   top: 0;
-  padding-top: 100px;
+  padding-top: 5%;
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -225,6 +225,7 @@ td {
   background-color: #fff;
   position: relative;
   margin: auto;
+  margin-top: 0;
   border: 2px solid #888;
   width: 400px;
   box-shadow:
@@ -241,18 +242,18 @@ td {
   padding: 20px 0;
   position: relative;
 }
-.form-group label {
+.form_group p {
   font-weight: 600;
   display: inline-block;
-  margin-bottom: 12px;
+  margin: 0 0 12px 0;
 }
-.form-group input[type='text'] {
+.form_group input[type='text'] {
   border: 2px solid #ced4da;
   border-radius: 0.15rem;
   height: 2rem;
   width: 100%;
 }
-.form-group select {
+.form_group select {
   border: 2px solid #ced4da;
   border-radius: 0.15rem;
   height: 2rem;
